--- a/testhtml/article.html
+++ b/testhtml/article.html
@@ -8,52 +8,33 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css"rel="stylesheet">
    </head>
-  <body>
+  <body class="body_with_header_article">
+      <header class="back_header">
+        <a href="body.html" style="font-size:40px;color:#FFFFFF;margin-left:5px;"><</a>
+	    </div>
+    </header>
+    
     <div class="contents">
     	<div class="article_coordinate">
-	    	<img src="img/a.jpg"><br>
-	    	<h1>タイトル</h1>
-	    	<h6>ーーーーーーーー雑誌の本文ーーーーーーーー</h6>
-	    	<h6>あいうえおかきくけこ</h6>
-	    	<h6>ーーーーーーーー雑誌の本文ーーーーーーーー</h6>
+	    	<img src="img/article/1.jpg"><br>
+	    	<h3>「女っぷりカーキ」アイテム5</h2>
+	    	<h4>いまカーキが来ている！</h4>
 	    	<h3>使用してるアイテム<h3>
 		    <div class="items_select">
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
+			    <a href="item.html"><img src="img/item/0.jpg"></a>
+			    <a href="item.html"><img src="img/item/1.jpg"></a>
+			    <a href="item.html"><img src="img/item/2.jpg"></a>
+			    <a href="item.html"><img src="img/item/3.jpg"></a>
+			    <a href="item.html"><img src="img/item/4.jpg"></a>
+			    <a href="item.html"><img src="img/item/5.jpg"></a>
+			    <a href="item.html"><img src="img/item/0.jpg"></a>
+			    <a href="item.html"><img src="img/item/1.jpg"></a>
+			    <a href="item.html"><img src="img/item/2.jpg"></a>
+			    <a href="item.html"><img src="img/item/3.jpg"></a>
+			    <a href="item.html"><img src="img/item/4.jpg"></a>
+			    <a href="item.html"><img src="img/item/5.jpg"></a>
 		    </div>
     	</div>	
-    	<div class="article_coordinate">
-	    	<img src="img/a.jpg"><br>
-	    	<h1>タイトル</h1>
-	    	<h6>ーーーーーーーー雑誌の本文ーーーーーーーー</h6>
-	    	<h6>あいうえおかきくけこ</h6>
-	    	<h6>ーーーーーーーー雑誌の本文ーーーーーーーー</h6>
-	    	<h3>使用してるアイテム<h3>
-		    <div class="items_select">
-			    <img src="img/a.jpg">
-			    <img src="img/a.jpg">
-			    <img src="img/a.jpg">
-			    <img src="img/a.jpg">
-			    <img src="img/a.jpg">
-			    <img src="img/a.jpg">
-			    <img src="img/a.jpg">
-			    <img src="img/a.jpg">
-			    <img src="img/a.jpg">
-			    <img src="img/a.jpg">
-			    <img src="img/a.jpg">
-			    <img src="img/a.jpg">
-		    </div>
-    	</div>
-	  </div>  
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
