--- a/testhtml/body.html
+++ b/testhtml/body.html
@@ -10,6 +10,7 @@
    </head>
   <body class="body_with_header">
     <header class="header">
+        <div id="top_type" style="background-image:url('img/top_type.png');width:100%;height:48px;background-size:100% 100%;"></div>
 	    <div id="type_select"></div>
 	    <div class="types">
 		    <ul class="types-ul">
