--- a/testhtml/coordinate.html
+++ b/testhtml/coordinate.html
@@ -11,20 +11,15 @@
   <body>
     <div class="contents">
     	<div class="article_coordinate">
-	    	<img src="img/a.jpg"><br>
+	    	<img src="img/article/1.jpg"><br>
 	    	<h3>組み合わせたアイテム<h3>
 		    <div class="items_select">
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
-			    <a href="item.html"><img src="img/a.jpg"></a>
+			    <a href="item.html"><img src="img/item/0.jpg"></a>
+			    <a href="item.html"><img src="img/item/1.jpg"></a>
+			    <a href="item.html"><img src="img/item/2.jpg"></a>
+			    <a href="item.html"><img src="img/item/3.jpg"></a>
+			    <a href="item.html"><img src="img/item/4.jpg"></a>
+			    <a href="item.html"><img src="img/item/5.jpg"></a>
 		    </div>
     	</div>	
   	  </div>  
