--- a/testhtml/index.html
+++ b/testhtml/index.html
@@ -12,7 +12,7 @@
     <footer class="footer">
 	    <ul class="footer-ul">
 			<li><a href="body.html" target="body"><img src="img/icon_search.png" class="footerButton" ></div></a></li>
-			<li><a href="press_room.html" target="body"><div>Press Room</div></a></li>
+			<li><a href="press_room.html" target="body"><img src="img/icon_room.png" class="footerButton" ></div></a></li>
 		</ul>
     </footer>
     
