--- a/testhtml/item.html
+++ b/testhtml/item.html
@@ -8,37 +8,44 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css"rel="stylesheet">
    </head>
-  <body>
+  <body class="body_with_header_article">
+      <header class="back_header">
+        <a href="article.html" style="font-size:40px;color:#FFFFFF;margin-left:5px;"><</a>
+	    </div>
+    </header>
+  
     <div class="contents">
     	<div class="item_detail">
-	    	<img src="img/a.jpg"><br>
-	    	<h1>商品名:Fashion Hack Wear</h1>
-	    	<h2>ブランド:Fashion Hack</h2>
+	    	<img src="img/item/1.jpg"><br>
+	    	<h3>商品名:Fashion Hack Wear</h3>
+	    	<h3>ブランド:Fashion Hack</h3>
 	    	<h3>価格:¥100,000</h3>
-	    	<h6>商品説明文書が書いてあります。</h6>
-	    	<img src="img/like.png" class="like"> 100件
-	    	<button type="button" onClick="window.open('http://www.hottomotto.com')">購入</button>
-	    	<button type="button" onClick="window.open('http://maps.apple.com/maps?q=')">近くの取り扱い店舗</button>
+	    	<h4>商品説明文書が書いてあります。</h4>
+		    <ul class="item-ul">
+				<li><a href="" target="body"><img src="img/icon_like.png" class="itemButton" ></a></li>
+				<li><a href="http://www.hottomotto.com" target="body"><img src="img/icon_shop.png" class="itemButton" ></a></li>
+				<li><a href="http://maps.apple.com/maps?q=" target="body"><img src="img/icon_ec.png" class="itemButton" ></a></li>
+			</ul>
     	</div>
     	<br><br>
-    	　このアイテムを使用している記事
+    	　<h4>このアイテムを使用している記事</h4>
 			<table class="items">
 			    <tbody>
 			        <tr>
-			            <td><div class="item"><a href="article.html"><img src="img/a.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
-			            <td><div class="item"><a href="article.html"><img src="img/a.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
+			            <td><div class="item"><a href="article.html"><img src="img/article/1.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
+			            <td><div class="item"><a href="article.html"><img src="img/article/1.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
 			        </tr>
 			        <tr>
-			            <td><div class="item"><a href="article.html"><img src="img/a.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
-			            <td><div class="item"><a href="article.html"><img src="img/a.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
+			            <td><div class="item"><a href="article.html"><img src="img/article/1.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
+			            <td><div class="item"><a href="article.html"><img src="img/article/1.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
 			        </tr>
 			        <tr>
-			            <td><div class="item"><a href="article.html"><img src="img/a.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
-			            <td><div class="item"><a href="article.html"><img src="img/a.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
+			            <td><div class="item"><a href="article.html"><img src="img/article/1.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
+			            <td><div class="item"><a href="article.html"><img src="img/article/1.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
 			        </tr>
 			        <tr>
-			            <td><div class="item"><a href="article.html"><img src="img/a.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
-			            <td><div class="item"><a href="article.html"><img src="img/a.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
+			            <td><div class="item"><a href="article.html"><img src="img/article/1.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
+			            <td><div class="item"><a href="article.html"><img src="img/article/1.jpg" class="item_img"><div class="item_title">記事5</div></a></div></td>
 			        </tr>
 			    </tbody>
 			</table>
