--- a/testhtml/press_room.html
+++ b/testhtml/press_room.html
@@ -8,8 +8,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css"rel="stylesheet">
    </head>
-  <body class="body_with_header">
-    <header class="header">
+  <body class="body_with_header_room">
+    <header class="room_header">
 	    <div id="room_select"></div>
 	    <div class="types">
 		    <ul class="types-ul">
