--- a/testhtml/room_list.html
+++ b/testhtml/room_list.html
@@ -12,20 +12,20 @@
 	  <table class="artile_list">
 	    <tbody>
 	        <tr>
-	            <td><div class="item"><img src="img/a.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></div></td>
-	            <td><div class="item"><img src="img/a.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
+	            <td><div class="item"><img src="img/item/0.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></div></td>
+	            <td><div class="item"><img src="img/item/1.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
 	        </tr>
 	        <tr>
-	            <td><div class="item"><img src="img/a.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
-	            <td><div class="item"><img src="img/a.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
+	            <td><div class="item"><img src="img/item/2.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
+	            <td><div class="item"><img src="img/item/3.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
 	        </tr>
 	        <tr>
-	            <td><div class="item"><img src="img/a.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
-	            <td><div class="item"><img src="img/a.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
+	            <td><div class="item"><img src="img/item/4.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
+	            <td><div class="item"><img src="img/item/5.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
 	        </tr>
 	        <tr>
-	            <td><div class="item"><img src="img/a.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
-	            <td><div class="item"><img src="img/a.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
+	            <td><div class="item"><img src="img/item/0.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
+	            <td><div class="item"><img src="img/item/1.jpg" class="item_img" onClick="selectMe(this);"><div class="item_title">アイテム5</div></a></div></td>
 	        </tr>
 	    </tbody>
 	</table>
